[build-system]
requires = ["poetry-core>=1.1.0"]

[tool.poetry]
name = "load-balancer"
version = "1.0.0"
description = "Load Balancer Python package"
authors = ["Alexandr <fetis.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
frozenlist = "1.3.3"
idna = "3.4"
iniconfig = "2.0.0"
multidict = "6.0.4"
notifications = "0.3.2"
packaging = "23.1"
pluggy = "1.0.0"
prometheus-client = "0.16.0"
pytest = "7.3.1"
pytest-mock = "3.10.0"
python-dotenv = "1.0.0"
PyYAML = "6.0"
requests = "2.30.0"
urllib3 = "2.0.2"
yarl = "1.9.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
